# FocusTube

./: .gitignore  LICENSE  PROSPECTS.md  README.md  api.http  api.management
server/: .env.example  .gitignore  README.md  __init__.py  alembic.ini  pyproject.toml
server/app/: __init__.py
server/app/api/: __init__.py
server/app/api/v1/: __init__.py  info.py  user_auth.py  video_link.py
server/app/api/v1/docs/: API.md
server/app/authentication/: models.py
server/app/authentication/jwt/: oauth2.py  token.py
server/app/config/: __init__.py  appwrite_client.py  cache.py  conf.py  database.py  logger.py  server.py
server/app/models/: __init__.py  constants.py  models.py  user_model.py
server/app/repository/: __init__.py  user.py  video_link.py
server/app/schema/: __init__.py  __inti__.py  user_schema.py  video_link_schema.py
server/app/utils/: __init__.py  api_utils.py  file_utils.py  helper.py  redis_utils.py
server/migrations/: README  env.py
server/migrations/versions/: 2e482b524019_models_py_creation.py  30aa3f1e7c3d_database_table_for_user_and_links.py  a51cd771f418_added_progress_tracker.py  a56bbdcda561_add_playlist_schema.py
