[project]
name = "FocusTube"
version = "0.1.0"
description = "FocusTube is an app designed to help you watch a YouTube video without any distractions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis>=2.0.1",
    "alembic>=1.16.4",
    "appwrite>=11.1.0",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "isort>=6.0.1",
    "openpyxl>=3.1.5",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "pypdf2>=3.0.1",
    "python-jose",
    "python-multipart>=0.0.20",
    "redis[async]>=6.4.0",
    "sqlalchemy>=2.0.42",
    "sqlmodel>=0.0.24",
    "tracebook>=0.1.10",
    "uvicorn>=0.35.0",
]


[tool.black]
line-length = 88
target-version = ['py310']


[tool.isort]
profile = "black"
